# observatory

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.MD  dockerfile  grafanaMapData.json  pom.xml
.github/: dependabot.yml
.github/workflows/: build-publish-latest.yaml  buildpublish.yml  createRelease.yml  pr-build.yml  settings.xml
application/: pom.xml
application/src/main/resources/: application-auth.properties  application.properties  banner.txt
application/src/test/resources/: job1.json
deployment/: docker-compose.yml  localenv-docker-compose.yml  postgreslocal-docker-compose.yml
deployment/helm/databackend/: .gitignore  Chart.yaml  Readme.md  values-template4private.yaml  values.template.yaml  values.yaml
deployment/helm/databackend/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  docker-registry-secret.yaml  ingress.yaml  oauthSecret.yaml  service.yaml  statefulset.yaml
deployment/helm/observatory/: Chart.yaml  Readme.md  values.template.yaml  values.yaml
deployment/helm/observatory/templates/: NOTES.txt  (+3 more)
deployment/helm/reacthook-spring/: Chart.yaml  values-template4private.yaml  values.yaml
deployment/https/: app-docker-compose.yml  env-docker-compose.yml  env.sh  nginx.conf  readme.md
deployment/https/imports/: realm.json
deployment/keycloak/: local-test-users.json
deployment/keycloak/imports/: realm.json
deployment/pgadmin/: postgreslocal-servers-config.json
experiments/: common.py  comparison.ipynb  counting-algos.ipynb  pyproject.toml
persistence/: pom.xml
rest/: pom.xml
saetester/: pom.xml
service/: pom.xml
(+230 files in other folders)
